--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,20 @@ services:
     command: >
       # -c: run command flag
       sh -c "python manage.py runserver 0.0.0.0:8000"
+    environment:
+      - DB_HOST=db
+      - DB_NAME=app
+      - DB_USER=postgress
+      - DB_PASS=localdevpassword
+    depends_on:
+      - db
+
+  db:
+    image: postgress:10-alpine
+    environment:
+      - POSTGRESS_DB=app
+      - POSTGRESS_USER=postgress
+      # in production this password should be overriden during
+      # the prod build process
+      # this current password will be used for local dev only
+      - POSTGRESS_PASSWORD=localdevpassword
