add wait_for_db command

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,22 +9,23 @@ services:
     volumes:
       - ./app:/app
     command: >
-      # -c: run command flag
-      sh -c "python manage.py runserver 0.0.0.0:8000"
+      sh -c "python manage.py wait_for_db &&
+             python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8000"
     environment:
       - DB_HOST=db
       - DB_NAME=app
-      - DB_USER=postgress
+      - DB_USER=postgres
       - DB_PASS=localdevpassword
     depends_on:
       - db
 
   db:
-    image: postgress:10-alpine
+    image: postgres:10-alpine
     environment:
-      - POSTGRESS_DB=app
-      - POSTGRESS_USER=postgress
+      - POSTGRES_DB=app
+      - POSTGRES_USER=postgres
       # in production this password should be overriden during
       # the prod build process
       # this current password will be used for local dev only
-      - POSTGRESS_PASSWORD=localdevpassword
+      - POSTGRES_PASSWORD=localdevpassword
