--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ script:
   # flake8: a linting toolkit for code style,
   # programming errors (unused imports and undefined names),
   # check cyclomatic complexity (count of the number of decisions in the code).
-  - docker-compose run app sh -c "python manage.py test && flake8"
+  - docker-compose run app sh -c "python manage.py wait_for_db && python manage.py test && flake8"
